Feat: Modified parsing logic to parse roster in the correct format